# strings

./: CMakeLists.txt  main.c
string/: CMakeLists.txt  string_.c  string_.h
string/tasks/: tasks.c  tasks.h
